Added top menu buttons
Top menu buttons are not functional;
Fixed icons alignment;
Clean text box from speech recognition when clicked on the close button.

--- a/board.html
+++ b/board.html
@@ -8,18 +8,28 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Proza+Libre&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="top-menu">
-        <img src="logo completa sem fundo.png" width="190px" height="auto">
-        <p><i class="arrow down"></i></p>
+        <img src="logo completa sem fundo.png" width="180px" height="50px">
+        <ul>
+            <li>
+              <a href="#">
+                <i class="material-icons" id="menu-button"> travel_explore </i>
+              </a>
+            </li>
+            <li>
+              <a href="#">
+                <i class="material-icons" id="menu-button"> archive </i>
+              </a>
+            </li>
+        </ul>
     </div>
     
     <div class="board">
         <div class="secao">
             <p>Notificações</p>
-             <button class="adicionar"><span class="material-icons">add</span></button>
+            <button class="adicionar"><span class="material-icons">add</span></button>
         </div>
         <div class="secao">
             <p>Em andamento</p>
