Added the speech to the board

--- a/board.html
+++ b/board.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="top-menu">
-        <img src="logo completa sem fundo.png" width="180px" height="50px">
+        <img src="imagens/logo completa sem fundo.png" width="180px" height="50px">
         <ul>
             <li>
               <a href="#">
@@ -30,6 +30,9 @@
         <div class="secao">
             <p>Notificações</p>
             <button class="adicionar"><span class="material-icons">add</span></button>
+            <div class="container">
+                <p id="texto-capturado"></p>
+            </div>
         </div>
         <div class="secao">
             <p>Em andamento</p>
@@ -48,6 +51,7 @@
                 <div>
                     <button id="btnGravar"><span class="material-icons"> mic </span></button>
                     <button id="btnParar"><span class="material-icons"> mic_off </span></button>
+                    <button id="confirmar"><span class="material-icons"> check </span></button>
                 </div>
             </div>
             <script src="speech.js"></script>
