--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body>
         <div class="speech">
             <div>
-                <p><span><img src="sino-laranja png.png"></span> DeskConnect </p>
+                <p><span><img src="imagens/sino-laranja png.png"></span> DeskConnect </p>
             </div>
             <p>Reconhecimento de voz</p>
             <textarea id="texto"></textarea>
